--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-clipboard.js": "^2.0.16",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-lazyload": "^3.2.0",
+    "react-modal": "^3.14.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.34.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
